[package]
authors = ["adamanteye <ada@adamanteye>"]
description = "Ghost Hunter 排行榜"
edition = "2024"
license = "MIT"
name = "leaderboard"
publish = false
version = "0.1.2"

[dependencies]
# Frameworks
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
# Utilities
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
