[package]
authors = ["adamanteye <ada@adamanteye>"]
description = "Ghost Hunter 排行榜"
edition = "2024"
license = "MIT"
name = "leaderboard"
publish = false
version = "0.1.5"

[dependencies]
# Frameworks
anyhow = "1"
axum = "0.8"
clap = { features = ["derive"], version = "4" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
tokio = { features = ["rt-multi-thread", "signal"], version = "1" }
tracing = "0.1"
tracing-subscriber = "0.3"
# Utilities
chrono = { features = ["serde"], version = "0.4" }
toml = "0.9"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
