[package]
authors = ["adamanteye <adamanteye@disroot.org>"]
description = "Ghost hunter leaderboard"
edition = "2024"
license = "MIT"
name = "leaderboard"
publish = false
version = "0.1.6"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { features = ["derive"], version = "4" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
compio = { version = "0.17", features = [
    "io",
    "io-uring",
    "runtime",
    "macros",
    "signal",
] }
chrono = { features = ["serde"], version = "0.4" }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
cyper-axum = "0.7"
futures-util = "0.3"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
